# coding-crashers

./: .env.example  .gitignore  .replit  README.md  package.json  pyproject.toml  render.yaml  run.py
backend/: __init__.py  app.py  config.py  extensions.py  requirements.txt
backend/controllers/: __init__.py  auth.py  flashcard.py
backend/models/: __init__.py
backend/routes/: __init__.py  api.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: shared.tsx  ui.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  Register.tsx
static/: script.js
templates/: index.html
